# mcp-firewall-site

./: README.md  index.html
assets/: app.js  site-config.js  styles.css
dashboard/: index.html
data/: dashboard.json  (+1 more)
mcp_firewall_render/: README_RENDER.md  pyproject.toml
mcp_firewall_render/artifacts/gliner2_mcp_adapter_v5_span_curated_cpu_e3_bs8_ml64_safe1/: training_config.json  training_manifest.json
mcp_firewall_render/artifacts/gliner2_mcp_adapter_v5_span_curated_cpu_e3_bs8_ml64_safe1/checkpoint-epoch-1/: adapter_config.json  adapter_model.safetensors
mcp_firewall_render/artifacts/gliner2_mcp_adapter_v5_span_curated_cpu_e3_bs8_ml64_safe1/checkpoint-epoch-2/: README.md  adapter_model.safetensors
mcp_firewall_render/artifacts/runtime/: catboost_pipeline.joblib  runtime_manifest.json
mcp_firewall_render/src/mcp_firewall/: __init__.py  access_control.py  audit_mcp_v5_dataset.py  build_artifacts.py  build_mcp_v5_span_source.py  build_mcp_v5_splits.py  catboost_runtime.py  compare_stages.py  config.py  decision_engine.py  demo.py  eda.py  evaluate_gliner2_baseline.py  export_dashboard_data.py  export_gliner_lora_demo.py  fastmcp_adapter.py  feature_extractor.py  firewall.py  generate_dataset.py  gliner2_dataset.py  lab_api.py  live_demo_api.py  llama_firewall_runtime.py  logger.py  mcp_gliner_v5_schema.py  ml_engine.py  models.py  openapi_export.py  prepare_runtime.py  privacy_filter_runtime.py  prompt_interpreter.py  rule_engine.py  shap_analysis.py  stack_demo.py  synthetic_data.py  train_gliner2_adapter.py  train_models.py  tune_catboost.py  utils.py
(+8 files in other folders)
